snugom/tests/ui/validate_uuid_on_numeric.stderr
error: uuid validator only supported for string fields
  --> tests/ui/validate_uuid_on_numeric.rs:14:23
   |
14 |     #[snugom(validate(uuid))]
   |                       ^^^^
